<resources>
    <string name="app_name">WhoMiss</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="EnterEmail">Enter Email address</string>
    <string name="enterpassw">Enter Password</string>
    <string name="reenterpassw">Re-Enter Password</string>
    <string name="reenterpass">Re Enter Password</string>
    <string name="entername">Enter Full Name</string>
    <string name="enterphone">Enter Phone Number</string>
    <string name="signout">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="removegroup">Remove Group</string>
    <string name="addgroup">Add Group</string>
    <string name="secertary">Secretary</string>
    <string name="groupname">Enter New Group Name</string>
    <string name="enterschoolname">Enter School Name</string>
</resources>
