<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.benishay.danny.whomiss.LoginActivity">

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="161dp"
        android:layout_marginStart="47dp"
        android:text="@string/signup" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnSignUp"
        android:layout_marginEnd="51dp"
        android:text="@string/signin" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:layout_alignStart="@+id/btnSignUp"
        android:layout_alignEnd="@+id/btnSignIn">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:ems="10"
            android:hint="@string/EnterEmail"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout1"
        android:layout_marginTop="39dp"
        android:layout_alignStart="@+id/textInputLayout1"
        android:layout_alignEnd="@+id/textInputLayout1">

        <EditText
            android:id="@+id/etPassw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enterpassw"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
